<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="com.example.onerootcontrol.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="#020202" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roleLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="409dp"
            android:layout_height="57dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile_no"
            app:layout_constraintVertical_bias="0.688">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="379dp"
                android:layout_height="59dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:inputType="none"
                android:text="@string/roleText"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:autofillHints="password" />

        <CheckBox
            android:id="@+id/signInCheck"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#000000"
            android:text="@string/sign_in_check_box"
            android:textColor="#040404" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"
            android:textColor="#000000"
            />

        <!--        <View-->
        <!--            android:layout_width="fill_parent"-->
        <!--            android:layout_height="2dp"-->
        <!--            android:background="#3fff"-->
        <!--            android:layout_marginTop="15dp"/>-->

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="51dp"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:text="Forget Password"-->
        <!--            android:textColor="#000000"-->
        <!--             />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>